tests/errors/E036.zen
void main() {
    42 = 7;
}